--- a/index.html
+++ b/index.html
@@ -238,15 +238,15 @@
 						<div class="card-body">
 							<h5 class="card-title mb-2">Jiale Zhang</h5>
 							<div class="card-text mb-3">
-								<div class="meta">TBD</div>
-								<div class="meta">TBD</div>
+								<div class="meta">Graduate Student</div>
+								<div class="meta">University of Leeds</div>
 							</div><!--//card-text-->
 							<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4">Read more &rarr;</a>
 						</div><!--//card-->
 						<div class="card-footer text-muted">
 							<ul class="social-list list-inline mb-0">
 								<!--								<li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>-->
-								<li class="list-inline-item"><a  href="https://www.linkedin.com/in/thangdv509/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
 								<!--								<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>-->
 							</ul><!--//social-list-->
 						</div>
@@ -849,8 +849,8 @@
 
 							<div class="col text-center text-md-start mx-auto">
 								<h2 class="name mb-2">Jiale Zhang</h2>
-								<div class="meta">TBD </div>
-								<div class="meta mb-2">TBD</div>
+								<div class="meta">Graduate Student</div>
+								<div class="meta mb-2">University of Leeds</div>
 								<!--								<ul class="social-list list-inline mb-0">-->
 								<!--									<li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>-->
 								<!--									<li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>-->
@@ -860,7 +860,7 @@
 						</div><!--//row-->
 					</div>
 					<div class="desc p-4 p-lg-5">
-						<p>TBD </p>
+						<p>Jiale Zhang is a visiting student at the Knight Foundation School of Computing and Information Sciences at Florida International University. He holds a Master’s degree in Computer Science from the University of Leeds.  His research focuses on enhancing the usability and effectiveness of machine learning, particularly large language models, in high-stakes decision-making contexts. </p>
 						<!--						<p class="mb-0">Donec neque magna, molestie vel varius ut, pretium a urna. Pellentesque placerat nunc eu condimentum pellentesque. Vivamus dictum nisl leo, id fermentum lectus porttitor et. Pellentesque tristique erat libero, condimentum porttitor nisl pharetra et.</p>-->
 					</div>
 				</div><!--//modal-body-->
