--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 				</div><!--//col-->
 				<div class="col-6 col-lg-3 mb-4">
 					<div class="card rounded-0">
-						<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img src="assets/images/speakers/jiale.png" class="card-img-top rounded-0" alt=""></a>
+						<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img src="assets/images/speakers/jiale.jpg" class="card-img-top rounded-0" alt=""></a>
 						<div class="card-body">
 							<h5 class="card-title mb-2">Jiale Zhang</h5>
 							<div class="card-text mb-3">
@@ -470,7 +470,7 @@
 						<div class="meta">
 							<h4 class="time mb-3">13:30 - 14:30</h4>
 							<div class="profile">
-								<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/jiale.png" alt=""></a>
+								<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/jiale.jpg" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-2">Jiale Zhang</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
@@ -844,7 +844,7 @@
 					<div class="theme-bg-light p-5">
 						<div class="row">
 							<div class="col-12 col-md-auto text-center">
-								<img class="profile-image mb-3 mb-md-0 me-md-4 rounded-circle mx-auto" src="assets/images/speakers/jiale.png" alt="" />
+								<img class="profile-image mb-3 mb-md-0 me-md-4 rounded-circle mx-auto" src="assets/images/speakers/jiale.jpg" alt="" />
 							</div>
 
 							<div class="col text-center text-md-start mx-auto">
