--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<div class="container">
 			<div class="hero-text-block">
 				<h2 class="hero-heading mb-2" style="color: whitesmoke;font-size: 32px">Fairness in Large Language Models: A Tutorial</h2>
-				<div class="hero-meta mb-3"><i class="far fa-calendar-alt me-2"></i>TBD <i class="fas fa-map-marker-alt mx-2"></i>Montreal, Canada</div>
+				<div class="hero-meta mb-3"><i class="far fa-calendar-alt me-2"></i>August 18th <i class="fas fa-map-marker-alt mx-2"></i>Montreal, Canada</div>
 				<div class="hero-intro mb-4">IJCAI 2025 Tutorial</div>
 <!--				<div class="hero-cta"><a class="btn btn-primary btn-lg" href="https://www.17sucai.com" target="_blank">Get Tickets</a></div>-->
 				
