--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 						<div class="card-body">
 							<h5 class="card-title mb-2">Zhipeng Yin</h5>
 							<div class="card-text mb-3">
-								<div class="meta">Ph.D. Student</div>
+								<div class="meta">Ph.D. Candidate</div>
 								<div class="meta">Florida International University</div>
 							</div><!--//card-text-->
 							<a href="#modal-speaker-3" data-bs-toggle="modal" data-bs-target="#modal-speaker-3">Read more &rarr;</a>
