--- a/index.html
+++ b/index.html
@@ -230,26 +230,26 @@
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
-<!--				<div class="col-6 col-lg-3 mb-4">-->
-<!--					<div class="card rounded-0">-->
-<!--						<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img src="assets/images/speakers/jiale.jpg" class="card-img-top rounded-0" alt=""></a>-->
-<!--						<div class="card-body">-->
-<!--							<h5 class="card-title mb-2">Jiale Zhang</h5>-->
-<!--							<div class="card-text mb-3">-->
-<!--								<div class="meta">Graduate Student</div>-->
-<!--								<div class="meta">University of Leeds</div>-->
-<!--							</div>&lt;!&ndash;//card-text&ndash;&gt;-->
-<!--							<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4">Read more &rarr;</a>-->
-<!--						</div>&lt;!&ndash;//card&ndash;&gt;-->
-<!--						<div class="card-footer text-muted">-->
-<!--							<ul class="social-list list-inline mb-0">-->
-<!--								&lt;!&ndash;								<li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>&ndash;&gt;-->
-<!--								<li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>-->
-<!--								&lt;!&ndash;								<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>&ndash;&gt;-->
-<!--							</ul>&lt;!&ndash;//social-list&ndash;&gt;-->
-<!--						</div>-->
-<!--					</div>&lt;!&ndash;//card&ndash;&gt;-->
-<!--				</div>&lt;!&ndash;//col&ndash;&gt;-->
+				<div class="col-6 col-lg-3 mb-4">
+					<div class="card rounded-0">
+						<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img src="assets/images/speakers/jiale.jpg" class="card-img-top rounded-0" alt=""></a>
+						<div class="card-body">
+							<h5 class="card-title mb-2">Jiale Zhang</h5>
+							<div class="card-text mb-3">
+								<div class="meta">Graduate Student</div>
+								<div class="meta">University of Leeds</div>
+							</div><!--//card-text-->
+							<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4">Read more &rarr;</a>
+						</div><!--//card-->
+						<div class="card-footer text-muted">
+							<ul class="social-list list-inline mb-0">
+								<!--								<li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>-->
+								<li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<!--								<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>-->
+							</ul><!--//social-list-->
+						</div>
+					</div><!--//card-->
+				</div><!--//col-->
 				<div class="col-6 col-lg-3 mb-4">
 					<div class="card rounded-0">
 						<a href="#modal-speaker-5" data-bs-toggle="modal" data-bs-target="#modal-speaker-5"><img src="assets/images/speakers/wenbin.png" class="card-img-top rounded-0" alt=""></a>
@@ -444,14 +444,14 @@
 					<div class="item item-talk">
 						<div class="meta">
 							<h4 class="time mb-3">14:00 - 14:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/zichong_1.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Zichong Wang</a></div>
-							</div><!--//profile-->
 <!--							<div class="profile">-->
-<!--								<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/jiale.jpg" alt=""></a>-->
-<!--								<div class="name"><a class="theme-link" href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-2">Jiale Zhang</a></div>-->
+<!--								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/zichong_1.jpg" alt=""></a>-->
+<!--								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Zichong Wang</a></div>-->
 <!--							</div>&lt;!&ndash;//profile&ndash;&gt;-->
+							<div class="profile">
+								<a href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-4"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/jiale.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-4" data-bs-toggle="modal" data-bs-target="#modal-speaker-2">Jiale Zhang</a></div>
+							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part IV: Resources for Evaluating Bias</h3>
