--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<li><i class="fas fa-check-circle me-2"></i>Background on LMs</li>
 					<li><i class="fas fa-check-circle me-2"></i>Quantifying Bias in LMs </li>
 					<li><i class="fas fa-check-circle me-2"></i>Mitigating Bias in LMs</li>
-					<li><i class="fas fa-check-circle me-2"></i>Resources for Evaluating Bias</li>
+					<li><i class="fas fa-check-circle me-2"></i>Resources for Evaluating Bias in LMs</li>
 					<li><i class="fas fa-check-circle me-2"></i>Future Directions</li>
 <!--					<li><i class="fas fa-check-circle me-2"></i>Practical workshops to lorem ipsum dolor</li>-->
 <!--					<li><i class="fas fa-check-circle me-2"></i>After-party lorem ipsum dolor</li>-->
@@ -129,10 +129,10 @@
 				<div style="display: flex; justify-content: center">
 					<div class="schedule-cta text-center" style="margin-right: 20px"><a href=https://dl.acm.org/doi/abs/10.1145/3682112.3682117 class="btn btn-primary btn-lg" target="_blank" style="width: 220px">Paper</a></div>
 
-					<div class="schedule-cta text-center" style="margin-left: 20px"><a href=# class="btn btn-primary btn-lg" target="_blank" style="width: 220px">Download Slide</a></div>
+					<div class="schedule-cta text-center" style="margin-left: 20px"><a href=Fairness_in_LMs_IJCAI_Tutorial.pdf class="btn btn-primary btn-lg" target="_blank" style="width: 220px">Tutorial slides</a></div>
 
 				</div><!--//benefits-list-->
-				<p style="margin-top: 25px; font-size: 20px ">   Check out our <a href=# style="font-style: italic;"><strong>survey</strong></a> on fairness in large language models. &nbsp;</p>
+				<p style="margin-top: 25px; font-size: 20px ">   Check out our <a href=# style="font-style: italic;"><strong>survey</strong></a> on fairness in language models. &nbsp;</p>
 				<p style="font-size: 20px">   This tutorial is grounded in our surveys and established benchmarks, all available as <a href=https://github.com/lavinWong/fairness-in-large-language-models style="font-style: italic"><strong>open-source resources</strong></a>.</p>
 <!--			<div class="event-countdown text-center mb-3">-->
 <!--				<h4 class="countdown-intro mb-2 text-center mb-3">Event Starts In:</h4>-->
@@ -398,8 +398,8 @@
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part I: Background on LMs</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room A</div>
-							<div class="desc"><strong>- Introduction to LMs <br>- Root Causes of Bias in LMs </div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room </div>
+							<div class="desc"><strong>- History of LMs <br>- Root Causes of Bias in LMs</strong> </div>
 						</div><!--//content-->
 					</div><!--//item-->
 					<div class="item item-talk">
@@ -412,20 +412,20 @@
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part II: Quantifying Bias in LMs</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room A</div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room </div>
 							<div class="desc"> <strong>- Demographic representation<br>- Stereotypical association<br>- Counterfactual fairness<br>- Performance disparities</strong></div>
 						</div><!--//content-->
 					</div><!--//item-->
-					<div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">13:00 - 13:30</h4>
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Coffee Break</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room A5</div>
-							<div class="desc">Coffee and cakes lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-						</div><!--//content-->
-					</div><!--//item-->
+<!--					<div class="item item-other">-->
+<!--						<div class="meta">-->
+<!--							<h4 class="time mb-3">13:00 - 13:30</h4>-->
+<!--						</div>&lt;!&ndash;//meta&ndash;&gt;-->
+<!--						<div class="content">-->
+<!--							<h3 class="title mb-3">Coffee Break</h3>-->
+<!--							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room A5</div>-->
+<!--							<div class="desc">Coffee and cakes lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>-->
+<!--						</div>&lt;!&ndash;//content&ndash;&gt;-->
+<!--					</div>&lt;!&ndash;//item&ndash;&gt;-->
 					<div class="item item-talk">
 						<div class="meta">
 							<h4 class="time mb-3">13:30 - 14:00</h4>
@@ -437,8 +437,8 @@
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part III: Mitigating Bias in LMs</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room A</div>
-							<div class="desc"><strong>- Pre-processing<br>- In-training<br></strong>- Intra-processing <br>- Post-processing</div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room </div>
+							<div class="desc"><strong>- Pre-processing<br>- In-training<br>- Intra-processing <br>- Post-processing</strong></div>
 						</div><!--//content-->
 					</div><!--//item-->
 					<div class="item item-talk">
@@ -454,9 +454,9 @@
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
-							<h3 class="title mb-3">Part IV: Resources for Evaluating Bias</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room B</div>
-							<div class="desc"><strong>- Toolkits<br>- Datasets</strong></div>
+							<h3 class="title mb-3">Part IV: Resources for Evaluating Bias in LMs</h3>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room </div>
+							<div class="desc"><strong>- Datasets<br>- Toolkits</strong></div>
 						</div><!--//content-->
 					</div><!--//item-->
 <!--					<div class="item item-other">-->
@@ -480,8 +480,9 @@
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Part V:Future Directions</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room C</div>
-							<div class="desc"><STRONG><br>- Rational Counterfactual Data Augmentation<BR>- Balancing Performance and Fairness in LLMs<br>- Fulfilling Multiple Types of Fairness<br>- Developing More and Tailored Datasets</STRONG> </div>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room </div>
+							<div class="desc"><STRONG>- Rational Counterfactual Data Augmentation<BR>- Balancing Performance and Fairness in LMs<br>- Fulfilling Multiple Types of Fairness<br>-Theoretical Analysis and Guarantees
+								<br>- Developing More and Tailored Datasets</STRONG> </div>
 						</div><!--//content-->
 					</div><!--//item-->
 <!--					<div class="item item-talk">-->
@@ -829,7 +830,7 @@
 						</div><!--//row-->
 					</div>
 					<div class="desc p-4 p-lg-5">
-						<p>Zhipeng Yin is a Ph.D. student at the Knight Foundation School of Computing and Information Sciences (KFSCIS) at Florida International University. His research focuses on machine learning and interpretable artificial intelligence, with a particular emphasis on algorithmic fairness. He explores how machine learning models can be designed and optimized to promote equitable outcomes and reduce bias, thereby contributing to the development of fair and trustworthy AI systems. </p>
+						<p>Zhipeng Yin is a Ph.D. candidate at the Knight Foundation School of Computing and Information Sciences, Florida International University. His research focuses on trustworthy AI, with particular interests in algorithmic fairness, reliability and the challenges of copyright and intellectual property in generative models. He has delivered tutorials at IJCAI’25 and ICDM’24, and serves as a reviewer and Program Committee member for leading conferences including ECML-PKDD, ECAI, AIES, and UAI. He is the recipient of the ECML-PKDD 2025 Best Student Paper Award. </p>
 					</div>
 				</div><!--//modal-body-->
 			</div><!--//modal-content-->
