--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				<p style="margin-top: 25px; font-size: 20px;">
 					Check out our
 					<span class="popover-hover">
-				<a href="Javascript:void(0);" style="font-style: italic;"><strong>surveys</strong></a>
+				<a href="Javascript:void(0);" style="font-style: italic;"><strong>Surveys</strong></a>
 				<span class="popover-content" style="text-align: justify">
 					<strong>&bull; <a href="https://arxiv.org/abs/2402.06853" style="color:#1786b6;text-decoration:underline;">History, Development, and Principles of Large Language Models-An Introductory Survey</a></strong><br>
 				  	<strong>&bull; <a href="https://dl.acm.org/doi/abs/10.1145/3682112.3682117" style="color:#1786b6;text-decoration:underline;">Fairness in Large Language Models: A Taxonomic Survey</a></strong> <br>
